--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
         <h2 class="status" id="status"></h2>
         <button class="restart">Restart</button>
     </div>
+    <footer class="copy">
+      © IsrDev 2022
+  </footer>
 </body>
 </html>
